@@ -148,15 +148,27 @@ def start(parser, options, target):
     else:
         port = None
 
-    # Start the server
+    # Set-up the server object
     server = Server(root, port=port, access_log='%s/access_log' % target,
                     error_log='%s/error_log' % target,
                     pid_file='%s/pid' % target)
-    if options.debug is True:
-        server.start()
-    else:
-        # XXX To implement: detach from the console
-        server.start()
+
+    # Debuggin mode (XXX does not works on Windows)
+    if options.debug is False:
+        # Detach from the console (this code derives from the Python
+        # Cookbook, see section "Forking a Daemon on Unix").
+        pid = os.fork()
+        if pid > 0:
+            sys.exit(0)
+        os.setsid()
+        pid = os.fork()
+        if pid > 0:
+            sys.exit(0)
+        # XXX What to do with the stdout and stderr?
+        sys.stdin.close()
+
+    # Start the server
+    server.start()
 
 
 
@@ -164,6 +176,7 @@ def stop(parser, options, target):
     pid = open('%s/pid' % target).read()
     pid = int(pid)
     os.kill(pid, signal.SIGTERM)
+    print 'Stopped.
 
 
 
